# Nexus-Hackbattle

./: .gitignore  README.md  package-lock.json
Backend/Agent/healthguard/: .env.example  README.md  check_models.py  debug_simple.py  debug_tools.py  demo_base64_conversion.py  demo_database_input.py  demo_json_workflow.py  demo_lab_processing.py  direct_groq_test.py  display_results.py  groq_lab_demo.py  groq_payload_structure.json  hospital_search_agent.py  hybrid_lab_analysis_20250925_140717.json  hybrid_lab_analysis_20250925_140936.json  hybrid_lab_analysis_20250925_141059.json  hybrid_lab_analysis_20250925_142426.json  hybrid_lab_analysis_20250925_142626.json  hybrid_lab_analysis_20250925_153506.json  hybrid_lab_processor.py  lab_analysis_llama_scout.py  lab_processing_requirements.txt  llama_scout_lab_analysis_20250925_152840.json  llama_scout_lab_analysis_20250925_153518.json  llama_scout_lab_analysis_20250925_154446.json  llama_scout_lab_analysis_20250925_160730.json  llama_scout_lab_analysis_20250925_160748.json  openai_vision_test.py  pyproject.toml  requirements.txt  setup_api_key.py  show_results.py  simple_crew_runner.py  test_browser_use.py  test_crewai_hybrid.py  test_groq_integration.py  test_llama_scout.py  test_setup.py  test_vision_models.py
Backend/Agent/healthguard/data/: processed_health_response.json  test_health_prompt.json  test_response_response.json
Backend/Agent/healthguard/src/healthguard/: crew.py  main.py
Backend/Agent/healthguard/src/healthguard/config/: agents.yaml  tasks.yaml
Backend/nexus/: .env  (+33 more)
Frontend/: test_nutrition_api.html
(+121 files in other folders)
