[project]
name = "healthguard"
version = "0.1.0"
description = "HealthGuard using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.0,<1.0.0","python-dotenv","pydantic>=2.0.0","langchain-groq"
]

[project.scripts]
healthguard = "healthguard.main:run"
run_crew = "healthguard.main:run"
train = "healthguard.main:train"
replay = "healthguard.main:replay"
test = "healthguard.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
